# vertex_ai_endpints_demo

./: README.md  cloudbuild.yaml  dockerfile  pyproject.toml
app/: adhoc.ipynb  main.py  main_call_endpoints.py  sample-request.json
docs/: openapi.json  redoc.html  redoc.sh
